# ChangeLog for sys-apps/dbus
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.438 2014/09/06 16:46:43 ottxor Exp $

  06 Sep 2014; Christoph Junghans <ottxor@gentoo.org> dbus-1.8.6.ebuild:
  add prefix support (bug #518954)

  24 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> -dbus-1.6.18-r1.ebuild,
  -dbus-1.8.0.ebuild, -dbus-1.8.2.ebuild, -dbus-1.8.4.ebuild,
  -files/dbus-1.5.12-selinux-when-dropping-capabilities-only-include-AUDI.patch:
  old

  24 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  +files/dbus-1.8.6-enable-stats_compile_failure.patch, dbus-1.8.6.ebuild:
  Fix building with USE="debug" using a patch from upstream bugzilla wrt
  #507232. Thanks to Richard H. and "Alpha Bravo" for reporting.

  05 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> dbus-1.8.6.ebuild:
  Relax dbus restarting postinst message wrt #514728

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.6.ebuild:
  Stable for sparc, wrt bug #516080

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.6.ebuild:
  Stable for arm, wrt bug #516080

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.6.ebuild:
  Stable for ia64, wrt bug #516080

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.6.ebuild:
  Stable for ppc64, wrt bug #516080

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.6.ebuild:
  Stable for ppc, wrt bug #516080

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.6.ebuild:
  Stable for alpha, wrt bug #516080

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.6.ebuild:
  Stable for x86, wrt bug #516080

  05 Jul 2014; Jeroen Roovers <jer@gentoo.org> dbus-1.8.6.ebuild:
  Stable for HPPA (bug #516080).

  04 Jul 2014; Agostino Sarubbo <ago@gentoo.org> dbus-1.8.6.ebuild:
  Stable for amd64, wrt bug #516080

*dbus-1.8.6 (03 Jul 2014)

  03 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> +dbus-1.8.6.ebuild: