@@ -5,17 +5,19 @@ AUX 80-dbus 341 SHA256 76ce25ce8769cdfcb0d7b7e52e5a7e6474448fc34e8ad9393afac1eca
 AUX dbus-1.8.6-enable-stats_compile_failure.patch 1227 SHA256 bcb6b8986c6c369be2f068e1fd0bdafc5e848babc02f0827776bc50aa6749211 SHA512 16e04822179f521d14e22fc07164bcba0e1e26473947c9d2795dd2b9457f2b451aa6571f40b61ee13b0e56d159f5a65261ed44f6c4abf80fd2b83076064f8606 WHIRLPOOL ba4c42c5c269336f9383cd435e195d24e74e49da202a5e3997e964bbe6cc214da2fcd87addc258a6e131cd8b9f011158e05283e66d85ca4ed72b2de014105d2b
 AUX dbus.initd 1185 SHA256 98e37b8b6ed25004e48c5855d74c9361eea06d3fee13cefcc0ed10ccf452aa01 SHA512 7983e77015b46c204b10948a1fcedaae53a75848919961eb1ef8878bfa11c933256642c0e3f59163e72374ce1bd33b0338c787ce067c0982fcdf8a798b922a15 WHIRLPOOL 62ef5b9191a2bd3410c53ed63015e9968789f448e5959de2ebc2404bc13ce99c333546bf1eb335f826ef7ea143f70a53c2ecffd81b4e35fa51ba2e2bdf68879f
 DIST dbus-1.8.6.tar.gz 1861784 SHA256 eded83ca007b719f32761e60fd8b9ffd0f5796a4caf455b01b5a5ef740ebd23f SHA512 62f162bab8e6f6d84fdfa1335013e0bf186d70bac5c3242dc956a912b7e35759f28a2bcaca29e1f620a7a30fc3ccc48552ffa123d4b3a2b5109135ae7ff5d1aa WHIRLPOOL 610f8b705ac61429e58220a422782a080966bfb01c4c856c715cfbc5939e4120542d503b8d22d117e3ad7653f33cf9c2405637c778390746bf38a02cb69eb13b
+DIST dbus-1.8.8.tar.gz 1864881 SHA256 dfab263649a979d0fff64a30cac374891a8e9940350e41f3bbd7679af32bd1fd SHA512 99e7e05347666e95f3ccaf3f19500b59a5e509cdb9489c11f47ed4f139d3bc8e21adcf48cbb5c4f0de1661e831d60634eb7b6b76cc080d32091b63c732ebe391 WHIRLPOOL 3905352dfc2f922b599dfe7bd650258b16b489802b1c39b0be03bcfbe56c6d89b39f51f1b6d2d851dd23705aa068f40ade856001fadcca885bd3e81cf6e51199
 EBUILD dbus-1.8.6.ebuild 7103 SHA256 f729e92538db3a3009745d60fbd40bf670b08a8800b0cf53b9ed35fd08fa3a25 SHA512 f565e9a43a18e37089e35a8b8122f43ae43237bf25f372018b1ca07376513d56273df951f4ae42e776807e890934ba67224d24e7d02fdb793fc66aa5da660ffd WHIRLPOOL 0b2e9cc5dcaada2ab7de96cec1e04df3278a7004ee9de20ca49bea3cabe577d10f1df9148490d314bb967a74855a9eba071240ea4d1ddd1227094fc17af2244b
-MISC ChangeLog 63190 SHA256 f3c42bd7ad48fb516678690597e2a2e94854278543bbb9ed9eaff502ab7694dd SHA512 a826ddad0daf2bec4682c7fdfed07317a8ec1fab1954903589c99842b46ca4aceae2153e98c97b41d35342883675515e71919fb4cfa0344886015d01b1f43af5 WHIRLPOOL aa3592a3aafbe63ae007337c72f5d186175f837bf8f4d978e361a2db8967c92ed92d8a199e10efe1a605ec76b19292ccc1e698a852488dbe7b74d6d958caa409
+EBUILD dbus-1.8.8.ebuild 7051 SHA256 ee5576ab59915719bc526621163c3ce2ee078d2edd61c3ef66c126f3cc95ae4c SHA512 62ddeee927884d8f8e54984f33eef450d6325f6e282174a48b42aa92c353a7c0a0c53b93177a831bb345db0d889ed44845fcfead764f8690281775a7b94c1290 WHIRLPOOL e05e4b40e5fdfaeb5538c7410bf544cf124f31eba98037855f9f72a9eca0df1bc378116ddf7a72b625ce4be5191211f2d12f65a5d42f5b0073ff0163bb2a5db8
+MISC ChangeLog 63331 SHA256 ba9765be802bf0d6b8231e2cadaa4f76cc2ae627a4f355ad23c7e3c7c84290c7 SHA512 c9a2e4db66bf2ef07237d4fb42772a55d5ee906341b33b9db7040b8b32f21eef67c93e7f009f0c8b6900443ea2383edf4267b41641f7354a7ceb360ce7e7295d WHIRLPOOL f15b21635511720f70f965050aaa1b96ac6ca5dfd1c3d7525f57a7e64a6b9fd69b0fca2e41eb59a1a3fc1245b5decaba4bf7677a07416f507eafaf9058f62c1e
 MISC metadata.xml 427 SHA256 d8fc8fedafc547578a85222cb60fb7eff3740c8ce101b22ba75aa3e5028135ce SHA512 2f8f64ded5050e87ce679d944dcf9c9a801ea03ee14471ab0702f10339f3f995701c313bfe10e7ab01f1bc784f04a5e6efbb29ea0b44513b9b3e384370956dc5 WHIRLPOOL 7a2add023434038b287c141213c2caf2adcc7ff5bcfb8025b2db0163bedd436fea64dd0e1a072f00232722738705fdc1f367e758d108373146d6fbea8803d5b2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUCzp2AAoJEOeBhlrCAAWG3+UH/i/Xwb+uG5f6xTH1iZCa/POS
-nRsuL7tQ7fVVTh8M3GSVbUtuPGxqiqmkPtZlDQY/x/mjWzBsdrkssMg3KvEqr+T8
-crdX9LMxuhmDLbweDbhcsLvpegsXd8HJfBprEEL0MDa3cPvU6N3NiDDMwmAPKQXd
-eKxK9dn8otCdJ4Rypgp0wE1xDHrmUXndlba3FQYjk5QrcH90EqFCl01nn14MH6t+
-N7vZkwDhP4eG4bZtSbKh8FGBrH9AkRQSzkvrvFzVS77uH0PFRs5D08b3ihgVYW13
-x3NmaQNM48Ybz4Yu/3V4Ix6j7ono1EDuGLjkMJ2FOTxgcSBNoXvHCpAhZfp5Ukw=
-=b8bI
+iQEcBAEBCAAGBQJUGSYsAAoJEEdUh39IaPFNr40H/20jyNvzLMM4z0nOe/KaK3Wg
+x7BbiPeMBWmzxnn9k8I+8JDQ9mNHgwbuqwrVz9dQK1nStPILIwmHd2KF4wH1KWHL
+Jy36ntS2nO1woJUFOdoYFgovBoJHlSizD4ZvcF+2I1qEa7u8YplWZeyrcHdwFxAz
+xjSQXBWLffIPV/Ev6Cz5Bg6u21C+09KeKgrCZIkjWdflVnghj0PFpo7ofoEF+g0J
+ilbr1ItFP/BmvqqZObrkIWNtd63Uz6rDxfQR7swxKQ27Qsi0xJ0QH/j35QmRX6Oc
+eqNQvyOkpbomAbSbp7OVFmTJ422nL/iqJuGi2BqkO6Nw42Btw5jarK04/8FuqzE=
+=cgwx
 -----END PGP SIGNATURE-----
