@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/dbus
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.438 2014/09/06 16:46:43 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.439 2014/09/17 06:12:12 ssuominen Exp $
+
+*dbus-1.8.8 (17 Sep 2014)
+
+  17 Sep 2014; Samuli Suominen <ssuominen@gentoo.org> +dbus-1.8.8.ebuild:
+  Version bump wrt security #522982
 
   06 Sep 2014; Christoph Junghans <ottxor@gentoo.org> dbus-1.8.6.ebuild:
   add prefix support (bug #518954)
